# Practica2

./: .gitignore  CMakeLists.txt
Practica2/: InputManager.cpp  InputManager.h  MainPractica2.cpp  Object3D.cpp  Object3D.h  Render.cpp  Render.h  Vertex.h  common.h  libMath.cpp  libMath.h
